:new: feat: added web demo

--- a/index/24numbergame.html
+++ b/index/24numbergame.html
@@ -88,6 +88,42 @@
       font-size: 10px;
       margin-top: 5px;
     }
+
+    @media (max-width: 600px) {
+      .container {
+        padding: 40px;
+      }
+      .title {
+        font-size: 16px;
+      }
+      .language-button {
+        font-size: 10px;
+      }
+      .input-label {
+        font-size: 10px;
+      }
+      .input-field {
+        font-size: 10px;
+      }
+      .submit-button,
+      .clear-button,
+      .copy-button {
+        width: 80px;
+        padding: 4px;
+        margin-top: 8px;
+        font-size: 10px;
+      }
+      .result-text {
+        height: 150px;
+        margin-top: 8px;
+        padding: 3px;
+        font-size: 10px;
+      }
+      .copy-label {
+        font-size: 8px;
+        margin-top: 3px;
+      }
+    }
   </style>
 </head>
 
